Complete favorite webpage

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <li>
         <strong>Super eyesight:</strong>An Eagle's eye are about 4-8 times
-        stronger than human eyes allowingthem to see prey from up to 3
+        stronger than human eyes allowing them to see prey from up to 3
         kilometers away.
       </li>
 
@@ -42,7 +42,7 @@
       </li>
     </ul>
 
-    <img src="https://cdn.hswstatic.com/gif/bald-eagle.jpg" alt="an eagel" height="400px" width="800px" />
+    <img src="https://cdn.hswstatic.com/gif/bald-eagle.jpg " alt="An eagel" height="300px" width="600px" />
 
     <p>For more information, click the link below</p>
 
@@ -50,5 +50,8 @@
     target="_blank"
       >More information about Eagle</a
     >
+
+   
+
   </body>
 </html>
